--- a/mira/index.html
+++ b/mira/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="site-loader" class="loader" role="status" aria-live="polite" aria-label="Loading">
+      <div class="loader__inner">
+        <div class="loader__ring" aria-hidden="true"></div>
+        <div class="loader__dot" aria-hidden="true"></div>
+        <div class="loader__brand">MIRA</div>
+      </div>
+    </div>
     <div class="page-bg"></div>
 
     <header class="nav" data-animate style="--nav-h: 64px;">
